nodejs/hello-world-docker/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-api
  name: nodejs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-api
    spec:
      containers:
      - image: nodejs-server
        name: nodejs-server
        imagePullPolicy: Never
        resources: {}
        ports:
          - containerPort: 3000
status: {}
