nodejs/hello-world-docker/sample-ingress-res.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: nodejs-api-svc
          servicePort: 80
